# SDL2_FlappyBird

./: CMakeLists.txt  generateProject.bat
cmake/: directories.cmake
src/: main.cpp
src/utils/: logger.h
